--- a/Competition_details.html
+++ b/Competition_details.html
@@ -166,7 +166,11 @@
         />
         <h1>NKU Data Science Club</h1>
       </div>
-      <a href="https://dsc-nku.vercel.app" class="back-button">Go Back</a>
+      <a
+        href="https://data-science-club-nku.github.io/DSC_Club-Website/"
+        class="back-button"
+        >Go Back</a
+      >
     </nav>
 
     <div class="competitions-container">
