--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="#project">Projects</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#eboard">E-Board</a></li>
-          <li><a href="https://dsc-nku.vercel.app/Competition_details.html">Competitions</a></li>
+          <li><a href="Competition_details.html">Competitions</a></li>
         </ul>
       </nav>
     </header>
