--- a/Competition_details.html
+++ b/Competition_details.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Competition Details</title>
     <style>
-      /* ... Previous styles remain the same until card-footer ... */
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -188,10 +187,8 @@
             "Join our monthly Kaggle competition where you'll work on real-world data science problems. Perfect for all skill levels!",
           date: "March 26, 2025 To March 31, 2025. ",
           participants: "30",
-          prize: "$200 in prizes",
-          competitionLink:
-            "https://kaggle-dupe.vercel.app",
-          learnMoreLink: "https://example.com/learn-more",
+          prize: "Anker Dongle",
+          competitionLink: "https://kaggle-dupe.vercel.app",
         },
         {
           title: "Treasure Hunt Challenge (Beginner)",
@@ -200,7 +197,24 @@
           participants: "30",
           prize: "SWAG",
           competitionLink: "https://tempgaurab.github.io/ncf-ctf/",
-          learnMoreLink: "https://example.com/viz-details",
+        },
+        {
+          title: "NKU SECRETS CTF",
+          description:
+            "SOLVE THIS BEGINNER LEVEL CTF AND LEARN MORE ABOUT CYBERSECUTY & HACKING",
+          date: "March 26, 2025 To March 31, 2025",
+          participants: "30",
+          prize: "Powerbank",
+          competitionLink: "https://secrets.nku.edu",
+        },
+        {
+          title: "Intermediate Treasure Hunt",
+          description:
+            " Show your creativity and analytical skills in solving this intermediate treasure hunt. ",
+          date: "March 26, 2025, 12:30pm - 3 pm",
+          participants: "30",
+          prize: "SWAG",
+          competitionLink: "https://tempgaurab.github.io/test/",
         },
       ];
 
