--- a/ppt.html
+++ b/ppt.html
@@ -202,7 +202,7 @@
         />
         <h1>NKU Data Science Club</h1>
       </div>
-      <a href="https://dsc-nku.vercel.app" class="back-button">Go Back</a>
+      <a href="index.html" class="back-button">Go Back</a>
     </nav>
 
     <h1>Featured Presentations</h1>
