--- a/index.html
+++ b/index.html
@@ -325,6 +325,29 @@
         ],
       },
       {
+        title: "Outbreak Nexus",
+        image:
+          "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpHg0klUsesvqtWYZQ8vMNl3Aw58Hul7RDAw&s",
+        description:
+          "Gemini-powered disease outbreak prediction and report generator based on real data by CDC, WHO",
+        link: "https://github.com/Sushantsth21/outbreak_nexus",
+        team: [
+          {
+            name: "Gaurab Baral",
+            linkedin: "https://www.linkedin.com/in/gaurab-baral-991333216/",
+          },
+          {
+            name: "Mithilesh Sah",
+            linkedin: "https://www.linkedin.com/in/mithsah/",
+          },
+          {
+            name: "Sushant Shrestha",
+            linkedin: "https://www.linkedin.com/in/sushant-shrestha-b51785228/",
+          }
+        ],
+      },
+
+      {
         title: "Chat APP",
         image:
           "https://utfs.io/f/Gpb59x6yDgxIRhTgyRpqIfTnOBg86uEb19yhPak0Gzpd2ecZ",
