--- a/index.html
+++ b/index.html
@@ -219,18 +219,6 @@
     <section class="eboard" id="eboard">
       <h2 class="eboard-heading">Executive Board</h2>
       <div class="eboard-container">
-        <div class="member-card">
-          <img
-            src="https://utfs.io/f/Wg4zPKBYwGoPyBfY1UpBzdbpsVXIM41qh65JiLw8Hc3kTxul"
-            alt="President"
-            class="member-image"
-          />
-          <h3 class="member-name">Gaurab Baral</h3>
-          <p class="member-position">President</p>
-          <a href="mailto:baralg1@nku.edu" class="member-email">
-            <i class="far fa-envelope"></i> baralg1@nku.edu
-          </a>
-        </div>
 
         <div class="member-card">
           <img
@@ -239,7 +227,7 @@
             class="member-image"
           />
           <h3 class="member-name">Aaditya Khanal</h3>
-          <p class="member-position">Vice President</p>
+          <p class="member-position">President</p>
           <a href="mailto:khanala1@nku.edu" class="member-email">
             <i class="far fa-envelope"></i> khanala1@nku.edu
           </a>
@@ -252,7 +240,7 @@
             class="member-image"
           />
           <h3 class="member-name">Sushant Shrestha</h3>
-          <p class="member-position">Secretary</p>
+          <p class="member-position">Vice President</p>
           <a href="mailto:shresthas11@nku.edu" class="member-email">
             <i class="far fa-envelope"></i> shresthas11@nku.edu
           </a>
@@ -281,6 +269,19 @@
           <p class="member-position">Social Media Manager</p>
           <a href="mailto:dhonjua1@nku.edu" class="member-email">
             <i class="far fa-envelope"></i> dhonjua1@nku.edu
+          </a>
+        </div>
+
+        <div class="member-card">
+          <img
+            src="https://utfs.io/f/Wg4zPKBYwGoPyBfY1UpBzdbpsVXIM41qh65JiLw8Hc3kTxul"
+            alt="President"
+            class="member-image"
+          />
+          <h3 class="member-name">Gaurab Baral</h3>
+          <p class="member-position">Student Advisor</p>
+          <a href="mailto:baralg1@nku.edu" class="member-email">
+            <i class="far fa-envelope"></i> baralg1@nku.edu
           </a>
         </div>
       </div>
