--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             class="member-image"
           />
           <h3 class="member-name">Mith Sah</h3>
-          <p class="member-position">Treasurer</p>
+          <p class="member-position">E-board Member</p>
           <a href="mailto:sahm1@nku.edu" class="member-email">
             <i class="far fa-envelope"></i> sahm1@nku.edu
           </a>
@@ -266,7 +266,7 @@
             class="member-image"
           />
           <h3 class="member-name">Aalok Dhonju</h3>
-          <p class="member-position">Social Media Manager</p>
+          <p class="member-position">E-board Member</p>
           <a href="mailto:dhonjua1@nku.edu" class="member-email">
             <i class="far fa-envelope"></i> dhonjua1@nku.edu
           </a>
